--- a/gardensomething/request.html
+++ b/gardensomething/request.html
@@ -132,12 +132,12 @@
                     </label>
 
                     <label>Planting Zone:
-                        <select name="membership" title="Select your membership level" required>
-                            <option value="" disabled selected>Select a membership:</option>
-                            <option value="zone 1-4">zone 1-4</option><!--this is not done stopping here to get kids-->
-                            <option value="zone 5-6">Bronze Membership</option>
-                            <option value="zone 7-8">Silver Membership</option>
-                            <option value="zone 9-10">Gold Membership</option>
+                        <select name="membership" title="Select your hardiness zone" required>
+                            <option value="" disabled selected>Select a hardiness zone:</option>
+                            <option value="zone 1-4">zone 1-4</option>
+                            <option value="zone 5-6">zone 5-6</option>
+                            <option value="zone 7-8">"zone 7-8"</option>
+                            <option value="zone 9-10">"zone 7-8"</option>
                         </select>
                     </label>
 
@@ -173,7 +173,7 @@
     <script type="module" src="scripts/timestamp.js"></script>
     <script type="module" src="scripts/modal.js"></script>
     <script type="module" src="scripts/join.js"></script>
-    <script src="scripts/locationtozip.js" type="module"></script> <!--this is not done get zip-->
-    <script src="scripts/ziptozone.js" type="module"></script> <!--this is not done get zip-->
+    <script src="scripts/locationtozip.js" type="module"></script> <!--this is done get zip-->
+    <script src="scripts/ziptozone.js" type="module"></script> <!--this is  done get zip-->
 </body>
 </html>
