--- a/gardensomething/site-plan.html
+++ b/gardensomething/site-plan.html
@@ -33,10 +33,10 @@
         <nav>
             <ul id="menu">
                 <li><a href="https://katdenney.github.io/wdd231/gardensomething/index.html">Home</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/gardensomething/companies.html">Companies</a></li>
                 <li><a href="https://katdenney.github.io/wdd231/gardensomething/seeds.html">Seeds</a></li>
-                <li><a href="https://katdenney.github.io/wdd231/gardensomething/idk.html">IDK</a></li>
                 <li><a href="https://katdenney.github.io/wdd231/gardensomething/request.html">Request</a></li>
-                <li><a href="https://katdenney.github.io/wdd231/gardensomething/site_plan.html" class="active">Site Plan</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/gardensomething/site-plan.html" class="active">Site Plan</a></li>
             </ul> 
         </nav>
     </header>
