--- a/gardensomething/thankyou.html
+++ b/gardensomething/thankyou.html
@@ -42,25 +42,31 @@
                 <h1 class="center-header">Garden Something</h2>
                 <img src="images/logo.webp" alt="Garden Something Logo" class="logo">
             </section>
+            <section class="hero">
+                <h2>You will hear from us soon!</h2>
+                <img src="images/pinkhero.webp" alt="hero image of flowers">
+                <div class="hero-text">
+                </div>
+            </section>
         </header>
         <main>
-            <section class="section-content">
-            <h1>Thank you!</h1>
+            <section>
+                <h2>Thank you!</h2>
             </section>
             <section id="thankyou">
-            <h2 id="thankyou-modal-title">We appreciate you requesting a quote!</h2>
-            <p id="thankyou-modal-desc">Here's the information you submitted:</p>
-            <ul id="thankyou-details"></ul>
-            <div>
-                <button onclick="window.location.href='index.html'">Close</button>
-            </div>
-            <script type="module" src="scripts/thankyou.js" defer></script>
-        </section>
+                <h2 id="thankyou-modal-title">We appreciate you requesting a quote!</h2>
+                <p id="thankyou-modal-desc">Here's the information you submitted:</p>
+                <ul id="thankyou-details"></ul>
+                <div>
+                    <button onclick="window.location.href='index.html'">Close</button>
+                </div>
+                <script type="module" src="scripts/thankyou.js" defer></script>
+            </section>
         </main>
         <footer class="foot-container">
             <div>
-            <p>&copy; <span id="currentyear"></span> Garden Something</p>
-            <p><span id="lastModified"></span> Katlin Denney WDD231</p>
+                <p>&copy; <span id="currentyear"></span> Garden Something</p>
+                <p><span id="lastModified"></span> Katlin Denney WDD231</p>
             </div>
             
             <div class ="footer-social">
@@ -70,10 +76,10 @@
             </div>
             
             <div>
-            <p>Garden Something LLC</p>
-            <p>3370 East Del Verde<br>Saratoga, CA 95070</p>
-            <p>Phone: (385) 377-0640</p>
-            <p><a href="mailto:info@gardensomething.org">info@gardensomething.org</a></p>
+                <p>Garden Something LLC</p>
+                <p>3370 East Del Verde<br>Saratoga, CA 95070</p>
+                <p>Phone: (385) 377-0640</p>
+                <p><a href="mailto:info@gardensomething.org">info@gardensomething.org</a></p>
             </div>
         </footer>
     </div>
