--- a/gardensomething/seeds.html
+++ b/gardensomething/seeds.html
@@ -103,7 +103,7 @@
             </div>
         </footer>
     </div>
-    <script src="scripts/seedsort.js" type="module"></script> <!--this is not done ....................-->
+    <script src="scripts/seedsort.js" type="module"></script> <!--this is not done ........modules/............-->
 </body>
 
 </html>
