--- a/gardensomething/thankyou.html
+++ b/gardensomething/thankyou.html
@@ -19,7 +19,7 @@
     <title>Thank You for Requesting a Quote</title>
     
     <script src="scripts/date.js" defer></script> <!-- JavaScript file for the date in the footer -->
-    <script type="module" src="scripts/join.js" defer></script>
+    <script type="module" src="scripts/form.js" defer></script>
     
    
 
